--- a/src/resources/window.ui
+++ b/src/resources/window.ui
@@ -351,7 +351,10 @@
             <child>
               <object class="GtkProgressBar" id="importProgressBar">
                 <property name="visible">True</property>
+                <property name="app_paintable">True</property>
                 <property name="can_focus">False</property>
+                <property name="valign">end</property>
+                <property name="show_text">True</property>
               </object>
               <packing>
                 <property name="expand">True</property>
