--- a/src/resources/window.ui
+++ b/src/resources/window.ui
@@ -119,6 +119,7 @@
     <property name="can_focus">False</property>
     <property name="default_width">600</property>
     <property name="default_height">600</property>
+    <property name="icon_name">applications-accessories</property>
     <child type="titlebar">
       <object class="GtkHeaderBar" id="headerBar">
         <property name="visible">True</property>
